# SpookySushi

./: .gitignore  CMakeLists.txt
engine/: CMakeLists.txt
engine/application/: CMakeLists.txt  base_game.hpp  game_loop.cpp  game_loop.hpp  job_config.cpp  job_config.hpp  window_config.cpp  window_config.hpp
engine/application/private/: editor_config.cpp  game_loop.cpp  game_loop_config.cpp  job_config.cpp  window_config.cpp
engine/application/public/: base_game.hpp  editor_config.hpp  game_loop.hpp  game_loop_config.hpp  job_config.hpp  window_config.hpp
engine/asset/: CMakeLists.txt
engine/asset/private/: mesh_asset.cpp  package.cpp
engine/asset/public/: mesh_asset.hpp  package.hpp  package_types.hpp
engine/async/: CMakeLists.txt  engine.cpp  engine.hpp  event.hpp  job.cpp  job.hpp  job_pool.cpp  job_pool.hpp  scmp_queue.hpp  worker.cpp  worker.hpp
engine/async/private/: worker.cpp
engine/async/public/: engine.hpp  event.hpp  job.hpp  worker.hpp
engine/core/: CMakeLists.txt  optional.hpp  rect.hpp  string_parser_helper.hpp  string_utils.hpp  types.hpp  xml.cpp  xml.hpp
engine/core/private/: bounding_box.cpp  compress.cpp  murmurhash.cpp  xml.cpp
engine/core/public/: bounding_box.hpp  color.hpp  compress.hpp  endian.hpp  murmurhash.hpp  string_utils.hpp  types.hpp
engine/debug/: CMakeLists.txt  logger.cpp  logger.hpp  profiler.cpp  profiler.hpp  request.hpp  response.cpp
engine/debug/private/: logger.cpp  profiler.cpp  request.cpp  server.cpp
engine/debug/public/: logger.hpp  profiler.hpp  request.hpp  response.hpp  server.hpp
engine/driver/: CMakeLists.txt  README
engine/driver/dynamic_linking/: CMakeLists.txt  dynamic_linking.hpp
engine/driver/process/: CMakeLists.txt  process.hpp
engine/driver/socket/: CMakeLists.txt
engine/ecs/: CMakeLists.txt  entity.cpp  entity.hpp  entity_iterator.hpp  entity_registry.cpp  entity_tree.cpp  entity_tree.hpp  indirect_vector_storage.hpp  null_storage.cpp  null_storage.hpp  storage_traits.hpp  tree_storage.hpp
engine/ecs/private/: entity.cpp  entity_registry.cpp
engine/ecs/public/: component_storage.hpp  component_storage_traits.hpp  dictionary_component_storage.hpp  entity.hpp  entity_registry.hpp  indirect_contiguous_component_storage.hpp  map_storage.hpp  vector_storage.hpp
engine/editor/: CMakeLists.txt
engine/editor/private/: editor_endpoint.cpp  editor_headers.cpp
engine/editor/public/: editor_endpoint.hpp  editor_headers.hpp
engine/input/: CMakeLists.txt  input_bus.cpp  input_bus.hpp  input_context.cpp  input_context.hpp  input_event.cpp  input_event.hpp  input_factory.cpp  input_factory.hpp  input_handler.cpp  input_handler.hpp  input_processor.cpp  input_processor.hpp  key_axis_input_handler.cpp  key_axis_input_handler.hpp  key_state_input_handler.cpp  key_state_input_handler.hpp  mouse_axis_input_handler.cpp  mouse_axis_input_handler.hpp
engine/input/private/: action_input_processor.cpp  axis_input_processor.cpp  input_processor.cpp  input_state.cpp
engine/input/public/: action_input_processor.hpp  axis_input_processor.hpp  input_event.hpp  input_processor.hpp  input_state.hpp
engine/network/: CMakeLists.txt  tcp_socket.cpp  tcp_socket.hpp
engine/network/private/: endpoint.cpp  ipv4_address.cpp  ipv6_address.cpp  tcp_socket.cpp
engine/network/public/: endpoint.hpp  ipv4_address.hpp  ipv6_address.hpp  tcp_socket.hpp
engine/opengl/: CMakeLists.txt  bind.hpp  buffer.cpp  buffer.hpp  debug.cpp  debug.hpp  frame_buffer.cpp  frame_buffer.hpp  opengl.hpp  program.cpp  program.hpp  render_buffer.cpp  render_buffer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  uniform.hpp  vertex_array.cpp  vertex_array.hpp
engine/opengl/private/: buffer.cpp  frame_buffer.cpp  program.cpp  shader.cpp  vertex_array.cpp
engine/opengl/public/: bind.hpp  buffer.hpp  debug.hpp  frame_buffer.hpp  opengl.hpp  private_opengl.hpp  program.hpp  shader.hpp  texture.hpp  uniform.hpp  vertex_array.hpp
engine/physic/: CMakeLists.txt  physic_backend.in.hpp
engine/physic/private/: bullet_debug_drawer.cpp  bullet_debug_drawer.hpp  bullet_physic_world.cpp  bullet_rigid_body.cpp  physic_movement_lock.cpp  physic_world.cpp  physic_world_traits.cpp
engine/physic/public/: .gitignore  bullet_physic_world.hpp  bullet_rigid_body.hpp  physic_joints.hpp  physic_movement_lock.hpp  physic_shape.hpp  physic_transform.hpp  physic_world.hpp  physic_world_traits.hpp  raycast_result.hpp  rigid_body_traits.hpp
engine/platform/: .gitignore  CMakeLists.txt  host_infos.in.hpp  optional.hpp
engine/plugin/: CMakeLists.txt
engine/plugin/private/: shared_library_runtime_plugin.cpp  shared_library_runtime_plugin.hpp
engine/plugin/public/: plugin_error_codes.h  runtime_plugin.hpp
engine/rendering/: CMakeLists.txt  camera.cpp  camera.hpp  mesh.cpp  mesh.hpp  opengl_renderer.cpp  opengl_renderer.hpp  proxy_renderer.cpp  proxy_renderer.hpp  renderer_interface.hpp  static_mesh_builder.cpp  static_mesh_builder.hpp  transform.cpp  transform.hpp
engine/rendering/private/: camera.cpp  debug_shapes.cpp  mesh.cpp  mesh_builder.cpp  open_gl_debug_renderer.cpp  open_gl_debug_renderer.hpp  opengl_debug_shape_renderer.hpp  opengl_renderer.cpp  opengl_static_mesh.cpp  opengl_static_mesh.hpp  perspective_camera_len.cpp  proxy_renderer.cpp  static_mesh_builder.cpp  transform.cpp
engine/rendering/public/: camera.hpp  camera_len.hpp  debug_shape_traits.hpp  debug_shapes.hpp  mesh.hpp  mesh_builder.hpp  opengl_renderer.hpp  proxy_renderer.hpp  renderer_interface.hpp  static_mesh_builder.hpp  transform.hpp
engine/scene/: CMakeLists.txt
engine/scene/private/: scene_graph.cpp
engine/sdl/: CMakeLists.txt  display.cpp  display.hpp  event.cpp  event.hpp  window.cpp  window.hpp
engine/service/: CMakeLists.txt  ServiceLocator.hpp  input_bus.cpp  input_bus.hpp  input_bus_service.hpp  input_processor_service.cpp  input_processor_service.hpp  job_service.cpp  job_service.hpp  log_service.cpp  log_service.hpp  service_locator.hpp  static_mesh_builder_service.cpp  static_mesh_builder_service.hpp
tool/packager/: CMakeLists.txt
(+72 files in other folders)
